# rust-actix-clean-starter

./: .env.example  .gitignore  .prettierrc.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  commitlint.config.js  config.toml  package.json  pnpm-lock.yaml
.github/: issue-template.md  pull_request_template.md
.github/workflows/: create-branch.yml  issue-autolink.yml  rust.yml
.husky/: commit-msg  post-merge  pre-commit  pre-push
scripts/: setup_db.sh
src/: main.rs
src/application/: error.rs  mod.rs
src/application/use_cases/: base.rs  mod.rs
src/application/use_cases/product/: create_product.rs  delete_product.rs  get_product.rs  list_products.rs  mod.rs  update_product.rs
src/application/use_cases/user/: create_user.rs  delete_user.rs  get_user.rs  list_users.rs  mod.rs  update_user.rs
src/config/: app.rs  database.rs  environment.rs  logger.rs  mod.rs
src/domain/entities/: mod.rs  product.rs  user.rs
src/domain/repositories/: mod.rs  product_repository.rs  user_repository.rs
src/infrastructure/: mod.rs
src/infrastructure/database/: init.sql  mod.rs
src/infrastructure/persistence/postgres/: mod.rs  product_repository.rs  user_repository.rs
src/interfaces/: mod.rs
src/interfaces/api/: docs.rs  mod.rs  routes.rs
src/interfaces/http/controllers/: mod.rs  product_controller.rs  user_controller.rs
src/interfaces/http/requests/: mod.rs  product_requests.rs  user_requests.rs
src/interfaces/http/responses/: error_responses.rs  mod.rs  product_responses.rs  (+1 more)
src/interfaces/middleware/: auth.rs  error.rs  logging.rs  mod.rs
